# Kirby

./: .gitignore  CMakeLists.txt  Kirby.sln  build.bat
TestoweOkienka/: TestoweOkienka.cpp  TestoweOkienka.rc  TestoweOkienka.vcxproj  TestoweOkienka.vcxproj.filters
source/: Zasoby.h  main.c
zasoby/: TestoweOkienka.rc
